k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: base
  namespace: chcooai-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - www.chcooai.com
        - chcooai.com
      secretName: base-tls
  rules:
    - host: www.chcooai.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: base-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: base-web
                port:
                  number: 80
    - host: chcooai.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: base-api
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: base-web
                port:
                  number: 80
